--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<!-- meyer-reset is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -13,29 +14,35 @@
 <body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
-		<!-- header, h1, logo etc content -->
-		<h1>Camping Stoves</h1>
-		<h2>Header Two</h2>
-		<h3>Header Three</h3>
-		<h4>Header Four</h4>
-		<p>A paragraph of lorem ipsum text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eligendi.</p>
-	</header>
+		<nav>
+		<ul class="nav1">
+			<li>
+				<a href="index.html" class="myButton">Home</a>
+			</li>
+		<li>
+		<a href="#" class="myButton">About</a>
+		</li>
+	<li>
+		<a href="#" class="myButton">How to care</a>
+		</li>
+	<li>
+		<a href="#" class="myButton">Buy here</a>
+		</li>
 
-	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
-			<li><a href="subpage-one.html">example link to subpage one</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+	</li>
 		</ul>
 	</nav>
+		<h1>Your pet from cyberspace, Tamagotchi!</h1>
+		
+		<p class="intro">Released to the public in 1996, this popular hand held digital pet to the world by storm. Teaching every kid who had one, just how much it takes to care for a pet.</p>
+	</header>
+
+
 	<main>
-		<blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus soluta vero fugiat saepe, tempore laboriosam nemo pariatur maxime sunt rerum."</blockquote>
+		
 	<!-- Main content here -->
 		<div class="grid">
-			<div>Column 1</div>
-			<div>Column 2</div>
-		</div>
+		
 	</main>
 	<footer>
 		<!-- footer content here -->
