--- a/how-to-care.html
+++ b/how-to-care.html
@@ -32,9 +32,9 @@
 	</li>
 		</ul>
 	</nav>
-		<h1>Your pet from cyberspace, Tamagotchi!</h1>
+		<h1>You better take care of me!</h1>
 		
-		<p class="intro">Released to the public in 1996, this popular hand held digital pet to the world by storm. Teaching every kid who had one, just how much it takes to care for a pet.</p>
+		<p class="intro">Your pet from cyberspace is very delicate. They require a lot of care.</p>
 	</header>
 
 
