--- a/buy-here.html
+++ b/buy-here.html
@@ -33,35 +33,39 @@
 		</ul>
 	</nav>
 	<div class="intro">
-			<h1>Learn about your new pet!</h1>
+			<h1>Get your Tamagotchi here!</h1>
 		
 			
-			<p class="care">One earth day is equal to about one year for Tamagotchi. </p>
-			<p class="care">Tamagotchi will change appearance several times before it reaches its adult form.</p>
-<p class="care">It seems that the shape, personality and life of each Tamagotchi is based on how well you take care of it. Each time you hatch a new Tamagotchi it could grow up to be any one of several adult forms. Tomagotchi will always return to its home planet. How well you care for it helps determine how long Tamagotchi will stay on Earth. When it is time for Tamagotchi to return to its home planet, there is nothing you can do. But, don't worry, you can always hatch another egg.</p>
-
-
+			<p class="intro">re-released in 2019 with tamagotchi on! The new hand-held keychain game hot a upgrade. now with larger screens and in color! </p>
 		</div>
+	<div class="parent">
+		<img src="images/tama5.jpeg">
+		<p>
+Tamagotchi ON Game
+$60.00</p>
+		<img src="images/tama6.jpeg">
+		<p>
+Tamagotchi ON Game
+$60.00</p>
+		<img src="images/tama7.jpeg">
+		<p>
+			Tamagotchi ON Game
+		$60.00
+				</p>
+		<img src="images/tama8.jpeg">
+				<p>
+			Tamagotchi ON Game
+			$60.00
+	</p>
 
-	<button onclick="topFunction()" id="myBtn" title="Go to top"><a href="buy-here.html"> shop!</button>
+</div>
+
+
+		<button onclick="topFunction()" id="myBtn" title="Go to top">
+		<a href="buy-here.html"> shop!</a>
+			</button>
 			
-			<img src="images/tama4.png">
-		
-			<img src="images/tama1.png">
-	
-
-			<img src="images/tama2.png">
-	
 			
-			<img src="images/tama3.png">
-
-	
-		
-				<img src="images/tama4.png">
-
-		
-			
-			<img src="images/tama1.png">
 
 		
 		</div>
