--- a/how-to-care.html
+++ b/how-to-care.html
@@ -36,6 +36,42 @@
 		
 		<p class="intro">Your pet from cyberspace is very delicate. They require a lot of care.</p>
 	</header>
+	<div>
+	<button onclick="topFunction()" id="myBtn" title="Go to top"><a href="buy-here.html"> shop!</button>
+	</a>
+</button>
+</div>
+			
+
+	<p class="care">FEED: Press A button until knife and fork icon is highlighted, then press B. Select either Meal or Snack by pressing the B button to feed Tamagotchi. Be careful not to over feed Tamagotchi; if you do it will refuse to eat.</p>
+	<p class="care">
+light: Press A button until the light bulb icon is highlighted, then press the B button. Select either On or Off by pressing the A button to move the arrow, then press the B button. The light should be turned off when Tamagotchi is sleeping, or it might get restless! Tamagotchi will automaticlly turn the light on when wakes up.
+</p>
+<p class="care">
+cleaning: Just like real pets, Tamagotchi goes to the bathroom. If droppings appear on the screen, it must be cleaned up right away or Tamagotchi will get sick. Press the A button until the Duck icon is highlighted, then press the B button to flush the screen. Tamagotchi will be very happy after the mess is cleaned up.
+</p>
+<p class="care">
+heath: Check Tamagotchi's health, by pressing the A button until the Health Meter icon is highlighted, then press B button to check Tamagotchi's age/weight, discipline, hunger and happiness. After you have checked all the screens to see if Tamagotchi needs anything, press C to return to the main screen. You should also check this screen if Tamagotchi beeps at you and the "attention" icon is highlighted.
+</p>
+<p class="care">
+play: Press A button until the bat and ball icon is highlighted, then press B button to begin the game. The object is to guess which way Tamagotchi will turn. To choose left, press the A button, to choose right, press the B button. If you choose the correct direction, Tamagotchi will be happy. There are 5 chances in each game to match Tamagotchi; the more you match, the happier Tamagotchi will be. To stop the game press the C button. After playing, check the happiness meter to see if it went up or down.
+</p>
+<p class="care">
+medicine: If a "skull" image appears, Tamagotchi is sick and needs medicine. Press A button until the medicine icon is highlighted, then press B. Sometimes 2 or 3 injections are needed before Tamagotchi is well.
+</p>
+<p class="care">
+ATTENTION: When this icon is highlighted, Tamagotchi needs something. Check the Health Meter, to determine what Tamagotchi needs. If Tamagotchi doesn't need anything, it must be disciplined or the Attention Icon will stay highlighted.</p>
+<p class="care">
+DISCIPLINE: Tamagotchi needs discipline if it:<span>
+1) beeps even though it is full and happy
+</span>
+<span>
+2) won't eat when it is hungry
+</span>
+<span>
+3) won't play games when it is not very happy. If you neglect to discipline Tamagotchi when needed, it might grow up into an unattractive, bad mannered alien.
+</span>
+</p>
 
 
 	<main>
