--- a/index.html
+++ b/index.html
@@ -32,9 +32,39 @@
 	</li>
 		</ul>
 	</nav>
-		<h1>Your pet from cyberspace, Tamagotchi!</h1>
+	<div class="intro">
+			<h1>Your pet from cyberspace, Tamagotchi!</h1>
 		
-		<p class="intro">Released to the public in 1996, this popular hand held digital pet to the world by storm. Teaching every kid who had one, just how much it takes to care for a pet.</p>
+			
+			<p class="intro">Released to the public in 1996, this popular hand held digital pet to the world by storm. Teaching every kid who had one, just how much it takes to care for a pet.</p>
+		</div>
+
+		<button onclick="topFunction()" id="myBtn" title="Go to top">
+		<a href="buy-here.html"> shop!</a>
+			</button>
+			
+			<img src="images/tama4.png">
+		
+			<img src="images/tama1.png">
+	
+
+			<img src="images/tama2.png">
+	
+			
+			<img src="images/tama3.png">
+
+	
+		
+				<img src="images/tama4.png">
+
+		
+			
+			<img src="images/tama1.png">
+
+		
+		</div>
+	</div>
+	
 	</header>
 
 
